# System2ML

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  DEPLOYMENT.md  DOCS_INDEX.md  Dockerfile  HOW_IT_WORKS.md  INSTALLATION.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PIPELINE_ARCHITECTURE.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  RUN.md  START_HERE.md  SYSTEM2ML_BUILD_SUMMARY.md  cli.py  count-braces.js  example.py  loan_dataset.csv  next.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  restart_backend.bat  run.py  sample_dataset.json  start.bat  start.ps1  start.sh  system2ml.db  tailwind.config.ts  test_data.csv  test_finetune.py  test_workflow.py  tsconfig.tsbuildinfo
.claude/: settings.local.json
agent/: __init__.py  ai_service.py  colab_service.py  finetuning_service.py  groq_service.py  planner.py  reward.py  rl_policy.py  tasks.py  training_engine.py
app/: globals.css  layout.tsx  page.tsx
benchmarks/: __init__.py
components/: providers.tsx  quick-upload.tsx  route-guard.tsx
data/: mock_dataset.csv
governance/: __init__.py  audit_logger.py  policies.yaml
hooks/: use-auth.tsx  use-design.tsx  use-websocket.ts  use-workflow.tsx
lc_env/: pyvenv.cfg
lib/: api.ts  llm-server.ts  state_machine.py  terminal-theme.ts  types.ts
memory/: __init__.py  embeddings.py  failure_store.py
observability/: __init__.py  carbon.py  drift.py  metrics.py
ollama_env/: pyvenv.cfg
orchestrator/: __init__.py  executor.py
pipelines/: predefined.py
tests/: __init__.py  conftest.py  finetune_test.py  test_api.py  (+5 more)
(+99 files in other folders)
