[project]
name = "system2ml"
version = "0.1.0"
description = "AI-driven ML pipeline design, execution, and optimization system"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
ml = [
    "mlflow>=2.8.0",
    "evidently>=0.4.0",
]
observability = [
    "prometheus-client>=0.18.0",
    "codecarbon>=2.1.0",
]
storage = [
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "mlflow>=2.8.0",
    "evidently>=0.4.0",
    "prometheus-client>=0.18.0",
    "codecarbon>=2.1.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
